--- a/social-media-accordion.html
+++ b/social-media-accordion.html
@@ -39,7 +39,7 @@
     }
     
     .accordion-header.active {
-        background: #007bff;
+        background: #C6A906;
         color: white;
     }
     
