--- a/social-media-carousel.html
+++ b/social-media-carousel.html
@@ -201,8 +201,7 @@
 
 <div class="carousel-container">
     <div class="carousel-header">
-        <h2 class="carousel-title">Current Social Media Trends</h2>
-        <p class="carousel-subtitle">Click each card to reveal details</p>
+        <p class="carousel-subtitle">The fitness social media landscape continues to evolve rapidly, with several key trends shaping how successful trainers engage with their audiences in 2025. Click each card to reveal details</p>
     </div>
     
     <div class="card-wrapper">
