--- a/hyrox_cpd/hyrox-tracker.html
+++ b/hyrox_cpd/hyrox-tracker.html
@@ -274,7 +274,7 @@
 
 <div class="tracker-container">
     <div class="tracker-header">
-        <h2 class="tracker-title">HYROX Course Tracker</h2>
+        <h2 class="tracker-title">HYROX Course Structure</h2>
         <p class="tracker-description">Follow the complete HYROX race structure from start to finish. Click on any stage to learn more about it.</p>
     </div>
     
