--- a/hyrox_cpd/hyrox-qualification-tabs.html
+++ b/hyrox_cpd/hyrox-qualification-tabs.html
@@ -4,7 +4,48 @@
         margin: 0;
         padding: 0;
     }
-    
+
+/* Loading Spinner */
+.loading-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #f8f9fa;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+    transition: opacity 0.3s ease;
+}
+
+.loading-overlay.hidden {
+    opacity: 0;
+    pointer-events: none;
+}
+
+.spinner {
+    width: 50px;
+    height: 50px;
+    border: 4px solid #e9ecef;
+    border-top-color: #C6A906;
+    border-radius: 50%;
+    animation: spin 0.8s linear infinite;
+}
+
+@keyframes spin {
+    to { transform: rotate(360deg); }
+}
+
+.loading-text {
+    margin-top: 20px;
+    font-size: 16px;
+    color: #666;
+    font-weight: 500;
+}
+   
     body {
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
         padding: 20px;
@@ -264,6 +305,11 @@
     }
 </style>
 
+<div class="loading-overlay" id="loadingOverlay">
+    <div class="spinner"></div>
+    <div class="loading-text">Loading content...</div>
+</div>
+
 <div class="tabs-container">
     <div class="header">
         <h1 class="title">HYROX Qualification & Championship Structure</h1>
@@ -426,5 +472,12 @@
         
         // Show corresponding panel
         document.getElementById(tabId).classList.add('active');
+
+       // Hide loading overlay
+window.addEventListener('load', function() {
+    setTimeout(function() {
+        document.getElementById('loadingOverlay').classList.add('hidden');
+    }, 300);
+});
     }
 </script>
