--- a/hyrox_cpd/hyrox-qualification-tabs.html
+++ b/hyrox_cpd/hyrox-qualification-tabs.html
@@ -328,7 +328,7 @@
         <div class="tab-content">
             <!-- Open Events Tab -->
             <div class="tab-panel active" id="open">
-                <span class="tier-level entry">Entry Level</span>
+                <span class="tier-level entry">Entry/ Standard Level</span>
                 <div class="tier-header">
                     <div class="tier-icon">🏃</div>
                     <h2 class="tier-title">Open Events</h2>
